Add support for QuantityType
Signed-off-by: Connor Petty <mistercpp2000+gitsignoff@gmail.com>